# python-poc

./: .gitignore  CI_FIX_SUMMARY.md  CLAUDE.md  COMPATIBILITY_REPORT.md  LICENSE  README.md  batch_operations_result.json  benchmark_results_simple.json  create_drawing.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  test_batch_operations.py  test_load_save.py  test_path_functionality.py
.github/: dependabot.yml
.github/workflows/: ci.yml  cpp-ci.yml  cpp-integration-tests.yml  full-ci.yml  publish.yml
benchmarks/: benchmark_runner.py  simple_benchmark.py  spatial_benchmark.py
cpp/: .trigger  CMakeLists.txt  README.md  setup.py  trigger_ci.txt
cpp/benchmarks/: CMakeLists.txt  benchmark_main.cpp
cpp/examples/: CMakeLists.txt  demo_serialization.cpp
cpp/include/drawing/: batch_operations.hpp  drawing.hpp  objects.hpp  serialization.hpp  types.hpp
cpp/python/: CMakeLists.txt  bindings.cpp
cpp/src/: batch_operations.cpp  drawing.cpp  json_serialization.cpp  objects.cpp  serialization.cpp
cpp/tests/: CMakeLists.txt  test_batch_operations.cpp  test_drawing.cpp  test_objects.cpp  test_performance.cpp  test_serialization.cpp  test_types.cpp
output/: Sample_Vector_Drawing.json  Sample_Vector_Drawing_pretty.json  Sample_Vector_Drawing_stats.txt  Simple_Example.json  Simple_Example_pretty.json  Simple_Example_stats.txt
python/: drawing_cpp_wrapper.py
python/data/: __init__.py  examples.py  models.py  svg_renderer.py
tests/: conftest.py
tests/cpp_integration/: README.md  conftest.py  run_tests.py  test_batch_operations.py  test_cpp_bindings.py  test_group_functionality.py  test_load_save.py  test_new_features.py  test_path_functionality.py  test_python_cpp_compatibility.py
tests/python/data/: test_basic_models.py  test_containers.py  test_drawable_objects.py
